[package]
name = "counter_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.10", features = ["macros", "auto-send"] }
log = "0.4"
env_logger = "0.9"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
openssl = { version = "0.10.41", features = ["vendored"] }
